prep for (harmony) patch of VSSurvival

--- a/rpskills/rpskills.csproj
+++ b/rpskills/rpskills.csproj
@@ -19,6 +19,10 @@
       <HintPath>$(VINTAGE_STORY)/VSSurvivalMod.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="Harmony">
+      <HintPath>$(VINTAGE_STORY)/Lib/0Harmony.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
 
 <ItemGroup>
