--- a/rpskills/rpskills.csproj
+++ b/rpskills/rpskills.csproj
@@ -36,6 +36,7 @@
 
 <ItemGroup>
   <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  <PackageReference Include="protobuf-net" Version="2.4.7" />
 </ItemGroup>
 
 </Project>
