--- a/origins/Properties/launchSettings.json
+++ b/origins/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Client": {
       "commandName": "Executable",
       "executablePath": "dotnet",
-      "commandLineArgs": "\"$(VINTAGE_STORY)/Vintagestory.dll\" --tracelog --addModPath \"$(ProjectDir)/bin/$(Configuration)/Mods\"",
+      "commandLineArgs": "\"$(VINTAGE_STORY)/Vintagestory.dll\" --tracelog --addModPath \"$(ProjectDir)/bin/$(Configuration)/Mods\" --logPath \"$(ProjectDir)/logs\" --playStyle creativebuilding --openWorld \"modding test world\"",
       "workingDirectory": "$(VINTAGE_STORY)"
     },
     "Server": {
