Cleaning working tree: added 0Harmony.dll in sln
I was originally considering doing a HarmonyTranspile. Instead I just
"fixed" VSSurvivalMod.dll. See tag/branch

--- a/origins/origins.csproj
+++ b/origins/origins.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Reference Include="0Harmony">
+      <HintPath>..\..\..\AppData\Roaming\Vintagestory\Lib\0Harmony.dll</HintPath>
+    </Reference>
     <Reference Include="VintagestoryAPI">
       <HintPath>$(VINTAGE_STORY)/VintagestoryAPI.dll</HintPath>
       <Private>false</Private>
